# DiaBolic-Renderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Setup.bat  vcpkg.json
DiaBolic/: CMakeLists.txt
DiaBolic/inc/: camera.hpp  model_manager.hpp  renderer.hpp  resources.hpp  shader_compiler.hpp
DiaBolic/inc/pipelines/: geometry_pipeline.hpp  ui_pipeline.hpp
DiaBolic/inc/utility/: log.hpp  resource_util.hpp  shader_compiler.hpp  transform_helpers.hpp
DiaBolic/src/: command_queue.cpp  main.cpp  model_manager.cpp  pch.h  renderer.cpp  resources.cpp
DiaBolic/src/pipelines/: geometry_pipeline.cpp  ui_pipeline.cpp
DiaBolic/src/utility/: dx12_helpers.cpp  resource_util.cpp  shader_compiler.cpp
assets/shaders/: bindless.hlsli  constant_buffers.hlsli  cube_spin.hlsl  dialogue_box.hlsl  uber.hlsl
